# GameDriver

./: .gitignore  AGENT.md  AGENT_WORKFLOW.md  ARCHITECTURE_GUARDRAILS.md  CTO_LEARNING.md  PR_GOVERNOR.md  README.md  SURVIVOR_OPERATOR.md  action.py  adb_device.py  baotu.py  click.py  devices.py  follow.py  game.py  ghost.py  guaji.py  guiji.py  hello.py  hosts.py  huan.py  main_task.py  mhxy.py  mijing.py  pyproject.toml  requirements.txt  ss.py  task.py  test.py  utils.py  yitiao.py  yys.py  yys_follow.py  yys_fuben.py  yys_guaji.py  yys_slow.py  yys_tupo.py
.github/: PULL_REQUEST_TEMPLATE.md
agents/: README.md  game-architect.md  pr-governor.md  survivor-operator.md
artifacts/live_debug/: step_00.json  step_01.json  step_02.json  step_03.json  step_04.json  step_05.json  step_06.json  step_07.json
docs/: ENGINE_PROGRESS_SIGNAL_PLAN.md
docs/agents/: AGENT_WORKFLOW.md  ARCHITECTURE_GUARDRAILS.md  PR_GOVERNOR.md
docs/architecture/: ENGINE_SCRIPT_BOUNDARY_PR1.md  event-stream-v1.md  issue-11-engine-script-boundary.md  issue-21-pr18-comment-disposition.md
keyboards/: dygma-defy_10-17-2025.json  truly_kanata.cfg
legacy/: game.py  hosts.py  ss.py  utils.py
legacy/mhxy/: follow.py  ghost.py  guaji.py
legacy/yys/: common.py  host.py  yuhun.py
legacy/yys_en/: common.py  douji.py  tupo.py
mhxy/: common.py
notebooks/: debug.ipynb
projects/android_access_mcp/: .gitignore  README.md  pyproject.toml
projects/android_access_mcp/src/android_access_mcp/: __init__.py  __main__.py  device.py  server.py
projects/android_access_mcp/tests/: test_device.py  test_server.py
scripts/: gh-app  gh-app-token  survivor.py
skills/auto-play/: .gitignore  SKILL.md  pyproject.toml
skills/auto-play/agents/: openai.yaml
skills/auto-play/games/survivor/: game_info.md  ocr_config.yaml  strategy.md
skills/auto-play/games/tower/: clear_goal.md  game_info.md  strategy.md  template_audit.md
skills/auto-play/scripts/: audit_templates.py  auto_play.py  automation_types.py  build_tower_character_index.py  fetch_taptap_catalog.py  image_analyzer.py  main_challenge_rules.py  rank_tower_choices.py  search_taptap_catalog.py  search_tower_characters.py  simulate_tower_witch.py  tower_clear_runner.py  tune_ocr.py
skills/auto-play/tests/: test_audit_templates.py  test_auto_play_template_learning.py  test_image_analyzer_templates.py  test_simulate_tower_witch.py  test_tower_clear_runner.py  test_tower_guide_tools.py
src/game_driver/: __init__.py  close_control.py  contracts.py  device.py  game_engine.py  image_analyzer.py  reasons.py  runner.py  targeting.py  template_matcher.py
src/game_driver/games/: __init__.py  survivor.py
src/game_driver/v2/: __init__.py  engine.py  state.py
tests/: test_auto_play_template_learning.py  test_close_control.py  test_device.py  test_engine_script_contract.py  test_game_engine.py  test_image_analyzer_templates.py  test_reasons.py  test_runner_hooks.py  test_state_v2.py  test_survivor_strategy.py  test_template_matcher.py
tests/fixtures/: state_v2_locations.json  state_v2_locations_steamroll.json
yys/: common.py  follow.py  fuben.py  heikeji.py  host.py  tupo.py  yuhun.py
yys_en/: baigui.py  common.py  follow.py  fuben.py  host.py  yuhun.py
