[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game_driver"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "adbutils>=2.10.2",
    "easyocr>=1.7.2",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/game_driver"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "nbstripout>=0.8.1",
    "ruff>=0.8.4",
]

[tool.ruff]
# Set line length to 88 (Black's default)
line-length = 88

# Target Python 3.12+
target-version = "py312"

[tool.ruff.format]
# Use single quotes for strings
quote-style = "single"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
]

# Ignore specific rules if needed
ignore = []
