[project]
name = "game_driver"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "adbutils",
    "nbstripout",
    "numpy",
    "opencv-python",
    "paddleocr==3.2.0",
    "paddlepaddle==3.2.0",
    "pytest",
]

[project.optional-dependencies]
dev = []

[dependency-groups]
dev = [
    "ipykernel",
    "jupyter",
    "nbstripout",
    "ruff",
]

[tool.uv]
package = false

[tool.ruff]
# Set line length to 88 (Black's default)
line-length = 88

target-version = "py314"

[tool.ruff.format]
# Use single quotes for strings
quote-style = "single"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
]

# Ignore specific rules if needed
ignore = []
