[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "android-access-mcp"
version = "0.1.0"
description = "A minimal MCP stdio server for Android screen capture, click, and swipe access."
requires-python = ">=3.11"
dependencies = [
    "adbutils>=2.10.0",
    "pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
android-access-mcp = "android_access_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/android_access_mcp"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
